--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "run": "node app.js",
     "test": "mocha ./test/test.js"
-    "coverage": "istanbul cover test/*.js"
+    "coverage": "istanbul cover ./test/*.js"
 
   }
 }
